# BotMonitor

./: .dockerignore  Cargo.toml  Dockerfile  README.fr.md  README.md
src/: main.rs
